# miniature-succotash

./: .gitignore  database.sqlite  index.py  pyproject.toml  requirements.txt  schema.prisma
.github/: dependabot.yml
.github/workflows/: ci.yml
.streamlit/: config.toml
libs/: Utils.py  connection.py
pages/: dashboard.py  master.py
prisma/: database.db  schema.prisma
src/miniature/: database.sqlite  index.py
src/miniature/libs/: connection.py  database.py  utils.py
src/miniature/pages/: dashboard.py  master.py
src/miniature/prisma/: bases.py  client.py  metadata.py  models.py  schema.prisma  types.py
